feat: add cookie refresher login engines

--- a/tools/cookie-refresher/.env.example
+++ b/tools/cookie-refresher/.env.example
@@ -2,3 +2,6 @@ ADMIN_BASE_URL=http://localhost:8000
 ADMIN_API_KEY=
 IMAP_HOST=imap.2925.com
 IMAP_PORT=993
+IMAP_USER=
+IMAP_PASS=
+GEMINI_LOGIN_EMAIL=
