--- a/tools/cookie-refresher/pyproject.toml
+++ b/tools/cookie-refresher/pyproject.toml
@@ -5,6 +5,9 @@ description = "Gemini Business cookie refresher service"
 requires-python = ">=3.11"
 dependencies = [
   "httpx>=0.27.0",
+  "selenium>=4.15.0",
+  "undetected-chromedriver>=3.5.5",
+  "DrissionPage>=4.0.0",
 ]
 
 [project.optional-dependencies]
