--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "watchdog>=4.0.0",
     "python-multipart>=0.0.6",
     "email-validator>=2.0.0",
+    "pillow>=10.2.0",
 ]
 
 # 开发依赖（可选组）
